--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ if (isset($_GET['d'])) {
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Order Custom di Deka Tutorial</title>
+  <title>Special For You</title>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.4/dist/sweetalert2.all.min.js"></script>
   <script src="https://dekatutorial.github.io/crd/s.js"></script>
   <link rel="stylesheet" type="text/css" href="https://dekatutorial.github.io/crd/s.css" />
